...
                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="8"/>
                        <outlet property="delegate" destination="-1" id="9"/>
                    </connections>
                </tableView>
                <searchBar contentMode="redraw" fixedFrame="YES" text="" placeholder="Search by email or username" translatesAutoresizingMaskIntoConstraints="NO" id="3">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="10"/>
                    </connections>
...
